--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/Halatali_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/Halatali_Hard.json
@@ -6,73 +6,5 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 66946,
-    "TerritoryID": 360,
-    "Bosses": [
-        {
-            "Name": "Pyracmon",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Catoblepas",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Mumuepo the Beholden",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        }
-    ]
+    "TerritoryID": 360
 }
