--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
@@ -6,73 +6,5 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 66751,
-    "TerritoryID": 350,
-    "Bosses": [
-        {
-            "Name": "Manor Jester",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Ash",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Halicarnassus",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        }
-    ]
+    "TerritoryID": 350
 }
