--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/PharosSirius.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/PharosSirius.json
@@ -6,95 +6,5 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 66744,
-    "TerritoryID": 160,
-    "Bosses": [
-        {
-            "Name": "Symond the Unsinkable",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Zu",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Tyrant",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Siren",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        }
-    ]
+    "TerritoryID": 160
 }
