--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
@@ -6,73 +6,5 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 65902,
-    "TerritoryID": 150,
-    "Bosses": [
-        {
-            "Name": "Einhander",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Magitek Gunship",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Midgardsormr",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        }
-    ]
+    "TerritoryID": 150
 }
