--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
@@ -6,73 +6,5 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 67060,
-    "TerritoryID": 373,
-    "Bosses": [
-        {
-            "Name": "Liavinne",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Spare Body",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        },
-        {
-            "Name": "Avere Bravearm",
-            "Strategy": "*STRATEGY DESC.*",
-            "TLDR": "*TLDR STRATEGY DESC.*",
-            "KeyMechanics": [
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                },
-                {
-                    "Name": "*MECHANIC NAME*",
-                    "Description": "*MECHANIC DESC.*",
-                    "Type": 11
-                }
-            ]
-        }
-    ]
+    "TerritoryID": 373
 }
