docs(duties): Populate ARR metadata in EN (#21)
Signed-off-by: James <41977884+James-Monkey@users.noreply.github.com>

--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 66315
+    "UnlockQuestID": 67060,
+    "TerritoryID": 373
 }
