--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheWanderersPalace_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheWanderersPalace_Hard.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 65967
+    "UnlockQuestID": 65967,
+    "TerritoryID": 188
 }
