--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 66751
+    "UnlockQuestID": 66751,
+    "TerritoryID": 350
 }
