--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HullbreakerIsle.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HullbreakerIsle.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 67062
+    "UnlockQuestID": 67062,
+    "TerritoryID": 361
 }
