--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 65902
+    "UnlockQuestID": 65902,
+    "TerritoryID": 150
 }
