--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheLostCityofAmdapor.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheLostCityofAmdapor.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 66925
+    "UnlockQuestID": 66925,
+    "TerritoryID": 363
 }
