--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheStoneVigil_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheStoneVigil_Hard.json
@@ -5,5 +5,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 50,
-    "UnlockQuestID": 67061
+    "UnlockQuestID": 67061,
+    "TerritoryID": 365
 }
